[tool.poetry]
name = "aicoder"
version = "0.1.0"
description = ""
authors = ["Fabio Gomez <fabiogomez11c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instructor = "^1.3.7"
pyyaml = "^6.0.2"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
